--- a/src/solver/CMakeLists.txt
+++ b/src/solver/CMakeLists.txt
@@ -72,6 +72,9 @@ set(ANTARES_SOLVER_LIBS
 	Antares::infoCollection
 	Antares::checks
 	Antares::misc
+        Antares::optimization-options
+        Antares::signal-handling
+        Antares::locale
 	yuni-static-uuid
 	yuni-static-core		
 	${CMAKE_THREADS_LIBS_INIT}
