--- a/src/solver/optimisation/CMakeLists.txt
+++ b/src/solver/optimisation/CMakeLists.txt
@@ -191,8 +191,12 @@ else()
 endif()
 target_link_libraries(model_antares
 		PUBLIC
-		utils
+		Antares::solverUtils
 		sirius_solver
+		antares-solver-simulation
+		Antares::benchmarking
+        Antares::optimization-options
+		PRIVATE
 		infeasible_problem_analysis
 		antares-solver-simulation
 		Antares::benchmarking
