--- a/src/solver/optim/api/CMakeLists.txt
+++ b/src/solver/optim/api/CMakeLists.txt
@@ -1,16 +1,16 @@
 set(PROJ optim-api)
 
-set(HEADERS
+set(SRC_API
         include/antares/solver/optim/api/mipVariable.h
-)
-set(SRC_OPTIM
-        ${HEADERS}
+        include/antares/solver/optim/api/mipObjective.h
+        include/antares/solver/optim/api/mipSolution.h
+        include/antares/solver/optim/api/mipConstraint.h
 )
 
-source_group("solver\\optim\\api" FILES ${SRC_OPTIM})
+add_library(${PROJ} ${SRC_API})
+add_library(Antares::optimapi ALIAS ${PROJ})
 
-add_library(${PROJ} ${SRC_OPTIM})
-add_library(Antares::${PROJ} ALIAS ${PROJ})
+set_target_properties(${PROJ} PROPERTIES LINKER_LANGUAGE CXX)
 
 target_include_directories(${PROJ}
         PUBLIC
