--- a/src/solver/CMakeLists.txt
+++ b/src/solver/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(simulation)
 add_subdirectory(ts-generator)
 add_subdirectory(utils)
 add_subdirectory(variable)
+add_subdirectory(optim)
 
 #
 # Resource file for Windows
