--- a/src/solver/optim/ortoolsImpl/CMakeLists.txt
+++ b/src/solver/optim/ortoolsImpl/CMakeLists.txt
@@ -3,11 +3,13 @@ set(PROJ optim-ortools-impl)
 set(HEADERS
         include/antares/solver/optim/ortoolsImpl/mipVariable.h
         include/antares/solver/optim/ortoolsImpl/mipSolution.h
+        include/antares/solver/optim/ortoolsImpl/mipObjective.h
 )
 set(SRC_ORTOOLS_IMPL
         ${HEADERS}
         mipVariable.cpp
         mipSolution.cpp
+        mipObjective.cpp
 )
 
 source_group("solver\\optim\\api" FILES ${SRC_ORTOOLS_IMPL})
