--- a/src/solver/optim/api/CMakeLists.txt
+++ b/src/solver/optim/api/CMakeLists.txt
@@ -5,6 +5,8 @@ set(SRC_API
         include/antares/solver/optim/api/mipObjective.h
         include/antares/solver/optim/api/mipSolution.h
         include/antares/solver/optim/api/mipConstraint.h
+
+        include/antares/solver/optim/api/linearSolver.h
 )
 
 add_library(${PROJ} ${SRC_API})
