Add missing header, fix build

--- a/src/solver/expressions/CMakeLists.txt
+++ b/src/solver/expressions/CMakeLists.txt
@@ -33,12 +33,5 @@ install(DIRECTORY include/antares
         DESTINATION "include"
 )
 
-add_executable(visitor main.cpp
-        Add.cpp
-        CloneVisitor.cpp
-        Negate.cpp
-        Parameter.cpp
-        PrintVisitor.cpp
-        StringVisitor.cpp
-
-)
+add_executable(visitor main.cpp)
+target_link_libraries(visitor PRIVATE antares-solver-expressions)
