Use raw-pointer & delete visitor

--- a/src/solver/expressions/CMakeLists.txt
+++ b/src/solver/expressions/CMakeLists.txt
@@ -16,6 +16,8 @@ set(SRC_Expressions
         include/antares/solver/expressions/StringVisitor.h
         CloneVisitor.cpp
         include/antares/solver/expressions/CloneVisitor.h
+        DeleteVisitor.cpp
+        include/antares/solver/expressions/DeleteVisitor.h
         include/antares/solver/expressions/ExpressionsNodes.h
 )
 
