--- a/src/solver/optim/api/CMakeLists.txt
+++ b/src/solver/optim/api/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SRC_API
         include/antares/solver/optim/api/mipConstraint.h
 
         include/antares/solver/optim/api/linearProblem.h
+        include/antares/solver/optim/api/linearProblemData.h
 )
 
 add_library(${PROJ} ${SRC_API})
