base class ortools linearproblemdata

--- a/src/solver/optim/ortoolsImpl/CMakeLists.txt
+++ b/src/solver/optim/ortoolsImpl/CMakeLists.txt
@@ -5,7 +5,9 @@ set(HEADERS
         include/antares/solver/optim/ortoolsImpl/mipSolution.h
         include/antares/solver/optim/ortoolsImpl/mipObjective.h
         include/antares/solver/optim/ortoolsImpl/mipConstraint.h
+
         include/antares/solver/optim/ortoolsImpl/linearProblem.h
+        include/antares/solver/optim/ortoolsImpl/linearProblemData.h
 )
 set(SRC_ORTOOLS_IMPL
         ${HEADERS}
@@ -13,7 +15,9 @@ set(SRC_ORTOOLS_IMPL
         mipSolution.cpp
         mipObjective.cpp
         mipConstraint.cpp
+
         linearProblem.cpp
+        linearProblemData.cpp
 )
 
 source_group("solver\\optim\\api" FILES ${SRC_ORTOOLS_IMPL})
