--- a/src/solver/optim/api/CMakeLists.txt
+++ b/src/solver/optim/api/CMakeLists.txt
@@ -5,7 +5,9 @@ set(SRC_API
         include/antares/solver/optim/api/mipObjective.h
         include/antares/solver/optim/api/mipSolution.h
         include/antares/solver/optim/api/mipConstraint.h
+
         include/antares/solver/optim/api/hasBounds.h
+        include/antares/solver/optim/api/hasName.h
 
         include/antares/solver/optim/api/linearProblem.h
         include/antares/solver/optim/api/linearProblemData.h
