--- a/src/solver/optim/api/CMakeLists.txt
+++ b/src/solver/optim/api/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRC_API
 
         include/antares/solver/optim/api/linearProblem.h
         include/antares/solver/optim/api/linearProblemData.h
+        include/antares/solver/optim/api/linearProblemFiller.h
 
         linearProblemData.cpp
 )
