--- a/src/solver/optim/ortoolsImpl/CMakeLists.txt
+++ b/src/solver/optim/ortoolsImpl/CMakeLists.txt
@@ -7,6 +7,7 @@ set(HEADERS
         include/antares/solver/optim/ortoolsImpl/mipConstraint.h
 
         include/antares/solver/optim/ortoolsImpl/linearProblem.h
+        include/antares/solver/optim/ortoolsImpl/linearProblemFiller.h
 )
 set(SRC_ORTOOLS_IMPL
         ${HEADERS}
@@ -16,6 +17,7 @@ set(SRC_ORTOOLS_IMPL
         mipConstraint.cpp
 
         linearProblem.cpp
+        linearProblemFiller.cpp
 )
 
 source_group("solver\\optim\\api" FILES ${SRC_ORTOOLS_IMPL})
