Revamp adequacy patch output variables

--- a/src/solver/variable/CMakeLists.txt
+++ b/src/solver/variable/CMakeLists.txt
@@ -109,6 +109,7 @@ set(SRC_VARIABLE_ECONOMY
 		economy/STStorageLevelsByCluster.h
 		economy/STStorageCashFlowByCluster.h
 		economy/unsupliedEnergy.h
+        economy/unsupliedEnergyCsr.h
 		economy/domesticUnsuppliedEnergy.h
 		economy/localMatchingRuleViolations.h
 		economy/spilledEnergyAfterCSR.h
@@ -127,6 +128,7 @@ set(SRC_VARIABLE_ECONOMY
 		economy/lolp.h
 		economy/avail-dispatchable-generation.h
 		economy/dispatchable-generation-margin.h
+
 
 		# Links
 		economy/links/flowLinear.h
