--- a/src/solver/expressions/CMakeLists.txt
+++ b/src/solver/expressions/CMakeLists.txt
@@ -18,6 +18,8 @@ set(SRC_Expressions
         include/antares/solver/expressions/NodesForwardDeclaration.h
         EvalVisitor.cpp
         include/antares/solver/expressions/EvalVisitor.h
+        include/antares/solver/expressions/PortFieldNode.h
+        PortFieldNode.cpp
 )
 
 
