Add tests for expression visitors

--- a/src/tests/src/solver/CMakeLists.txt
+++ b/src/tests/src/solver/CMakeLists.txt
@@ -1,6 +1,6 @@
-
 add_subdirectory(simulation)
 add_subdirectory(optimisation)
 add_subdirectory(utils)
 add_subdirectory(infeasible-problem-analysis)
 add_subdirectory(lps)
+add_subdirectory(expressions)
