--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -115,7 +115,12 @@ jobs:
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build _build --config Release -j$(nproc)
 
       - name: Free up space
-        run:  rm -rf ${ORTOOLS_DIR}
+        run: |
+          rm -rf ${ORTOOLS_DIR}
+          apt-get remove uuid-dev libwxgtk3.0-gtk3-dev
+          apt-get remove libboost-test-dev
+          apt-get remove g++-10 gcc-10
+          apt-get autoremove
 
       - name: Test and generate coverage
         continue-on-error: true
