--- a/src/solver/expressions/CMakeLists.txt
+++ b/src/solver/expressions/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SRC_Expressions
         visitors/PrintVisitor.cpp
         visitors/CloneVisitor.cpp
         visitors/EvalVisitor.cpp
+        visitors/EvaluationContext.cpp
 
         include/antares/solver/expressions/nodes/AddNode.h
         include/antares/solver/expressions/nodes/ComponentNode.h
@@ -22,6 +23,7 @@ set(SRC_Expressions
 
         include/antares/solver/expressions/visitors/CloneVisitor.h
         include/antares/solver/expressions/visitors/EvalVisitor.h
+        include/antares/solver/expressions/visitors/EvaluationContext.h
         include/antares/solver/expressions/visitors/PrintVisitor.h
         include/antares/solver/expressions/visitors/Visitor.h
 
