--- a/src/solver/expressions/CMakeLists.txt
+++ b/src/solver/expressions/CMakeLists.txt
@@ -17,6 +17,11 @@ set(SRC_Expressions
         include/antares/solver/expressions/nodes/DivisionNode.h
         include/antares/solver/expressions/nodes/SubtractionNode.h
         include/antares/solver/expressions/nodes/ComparisonNode.h
+        include/antares/solver/expressions/nodes/EqualNode.h
+        include/antares/solver/expressions/nodes/LessThanNode.h
+        include/antares/solver/expressions/nodes/LessThanOrEqualNode.h
+        include/antares/solver/expressions/nodes/GreaterThanNode.h
+        include/antares/solver/expressions/nodes/GreaterThanOrEqualNode.h
         include/antares/solver/expressions/nodes/ComponentNode.h
         include/antares/solver/expressions/nodes/ExpressionsNodes.h
         include/antares/solver/expressions/nodes/LiteralNode.h
