--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -28,7 +28,10 @@ jobs:
         with:
           root-reserve-mb: 5120
           swap-size-mb: 1024
-          remove-dotnet: 'true'
+          remove-dotnet: true
+          remove-android: true
+          remove-haskell: true
+          remove-codeql: true
 
       - uses: actions/checkout@v4
         with:
