--- a/src/solver/expressions/CMakeLists.txt
+++ b/src/solver/expressions/CMakeLists.txt
@@ -4,12 +4,15 @@ project(Expressions)
 set(SRC_Expressions
         nodes/PortFieldNode.cpp
         nodes/ComponentNode.cpp
+        nodes/BinaryNode.cpp
+        nodes/UnaryNode.cpp
 
         visitors/PrintVisitor.cpp
         visitors/CloneVisitor.cpp
         visitors/EvalVisitor.cpp
 
         include/antares/solver/expressions/nodes/ParentNode.h
+        include/antares/solver/expressions/nodes/UnaryNode.h
         include/antares/solver/expressions/nodes/BinaryNode.h
         include/antares/solver/expressions/nodes/AddNode.h
         include/antares/solver/expressions/nodes/MultiplicationNode.h
@@ -38,7 +41,6 @@ set(SRC_Expressions
         include/antares/solver/expressions/visitors/Visitor.h
 
         include/antares/solver/expressions/Registry.hxx
-        include/antares/solver/expressions/nodes/UnaryNode.h
 )
 
 
