--- a/src/packaging/Config.cmake.in
+++ b/src/packaging/Config.cmake.in
@@ -11,6 +11,21 @@ else ()
 		message (FATAL_ERROR "Minizip dependency (minizip or minizip-ng) not found.")
 	endif ()
 endif ()
+find_package(sirius_solver QUIET)
+if (NOT sirius_solver_FOUND)
+include(FetchContent)
+    message("SIRIUS not found, fetching it from github")
+FetchContent_Declare(sirius_solver
+        GIT_REPOSITORY https://github.com/AntaresSimulatorTeam/sirius-solver.git
+        GIT_TAG feature/fix_include_path
+        SOURCE_SUBDIR src
+        OVERRIDE_FIND_PACKAGE ON
+)
+FetchContent_MakeAvailable(sirius_solver)
+find_package(sirius_solver REQUIRED)
+endif ()
+message(status "${CMAKE_CURRENT_LIST_DIR}")
+message(status "${CMAKE_CURRENT_BINARY_DIR}")
 find_dependency(ortools REQUIRED)
 find_dependency(sirius_solver REQUIRED)
 
