--- a/src/packaging/Config.cmake.in
+++ b/src/packaging/Config.cmake.in
@@ -11,11 +11,16 @@ else ()
 		message (FATAL_ERROR "Minizip dependency (minizip or minizip-ng) not found.")
 	endif ()
 endif ()
-include( ${CMAKE_CURRENT_LIST_DIR}/ensure_sirius.cmake)
-find_dependency(sirius_solver REQUIRED)
-include( ${CMAKE_CURRENT_LIST_DIR}/ensure_ortools.cmake)
-find_dependency(ortools REQUIRED)
-
+if (ANTARES_INSTALL_DEPS)
+    message(STATUS "Installing Antares dependencies")
+    include( ${CMAKE_CURRENT_LIST_DIR}/ensure_sirius.cmake)
+    find_dependency(sirius_solver REQUIRED)
+    include( ${CMAKE_CURRENT_LIST_DIR}/ensure_ortools.cmake)
+    find_dependency(ortools REQUIRED)
+else()
+    find_dependency(sirius_solver)
+    find_dependency(ortools)
+endif()
 include("${CMAKE_CURRENT_LIST_DIR}/AntaresTargets.cmake")
 
 check_required_components(Antares)
